<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titlePrice"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/title_dialog_price"
            android:textColor="@color/black_50"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="1000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceSet"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/price"
                android:textColor="@color/black_50"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/insertPrice"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="0.0"
                android:inputType="numberDecimal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/ok"
                android:textColor="@color/indigoAccentColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/noPriceButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_toLeftOf="@id/okButton"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/no_price"
                android:textColor="@color/redColorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>