<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.maninder.marvelcomics.comicsdetail.ComicsDetailFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarComicsDetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progressBar"
                style="?android:progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/error"
                android:textColor="@color/colorPrimaryRed"
                android:textSize="18sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/comicsImage"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:layout_margin="12dp"
                    android:background="@color/black_50"
                    android:minWidth="130dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/comicsImage"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_comics"
                        android:padding="4dp"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/titleComics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_comics"
                        android:padding="8dp"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/author"
                        android:padding="4dp"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/authorComics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/author"
                        android:padding="8dp"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/pageCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/pageCount"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/priceComics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/price"
                        android:textColor="@color/black_50"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:typeface="sans" />
                </LinearLayout>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/comicsImage"
                    android:padding="12dp"
                    android:text="@string/description"
                    android:textColor="@color/black_50"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/descriptionComics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/desc"
                    android:hint="@string/description"
                    android:padding="12dp"
                    android:textColor="@color/black_50"
                    android:textSize="16sp" />
            </RelativeLayout>
        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>